<?xml version="1.0"?>
<package>
  <name>custom_landmark_2d</name>
  <version>1.0.1</version>
  <description>
    Simple object recognition library for 2D images, with the additional functionality of projecting matched 2D objects to 3D pointclouds.
    A matching alogrithm is used underneath.
  </description>

  <maintainer email="liux44@cs.washington.edu">Matthew Liu</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/custom_landmark_2d</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>